Extracting Metadata in Application.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
   file_picker: ^10.2.0
+  audio_metadata_reader: ^1.4.1
 
 
 dev_dependencies:
