--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.5.3
   file_picker: ^10.2.0
   audio_metadata_reader: ^1.4.1
+  path_provider: ^2.1.5
 
 
 dev_dependencies:
