--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   file_picker: ^10.2.0
   audio_metadata_reader: ^1.4.1
   path_provider: ^2.1.5
-  audioplayers: ^6.5.0
+  just_audio: ^0.10.4
 
 
 dev_dependencies:
