--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   audio_metadata_reader: ^1.4.1
   path_provider: ^2.1.5
   just_audio: ^0.10.4
+  path: ^1.9.0
 
 
 dev_dependencies:
