--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   just_audio: ^0.10.4
   path: ^1.9.0
   image_picker: ^1.0.7
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
