--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path: ^1.9.0
   image_picker: ^1.0.7
   share_plus: ^11.0.0
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
