--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   image_picker: ^1.0.7
   share_plus: ^11.0.0
   local_auth: ^2.3.0
+  url_launcher: ^6.2.5
+  provider: ^6.1.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
